--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,10 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.0.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
-    //Retrofit 2 & Gson
+    //Retrofit 2 - Adapter Rxjava3 & Gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     //Room : optional - RxJava3 support for Room
     implementation "androidx.room:room-runtime:2.3.0"
