--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //create indicator -viewpager2
+    implementation 'me.relex:circleindicator:2.1.6'
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
