--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdk 33
+    namespace 'com.sonmob.movieapp'
 
     defaultConfig {
         applicationId "com.sonmob.movieapp"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -30,25 +30,23 @@ android {
     buildFeatures {
         dataBinding true
     }
-
-    
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'org.jetbrains:annotations:15.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    //picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Core
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
     //ReactiveX
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     //Retrofit 2 & Gson
@@ -56,26 +54,28 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
-    //Room : optional - RxJava3 support for Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    implementation "androidx.room:room-rxjava3:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    // Room : optional - RxJava3 support for Room
+    implementation "androidx.room:room-runtime:2.5.2"
+    implementation "androidx.room:room-rxjava3:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
 
-    //Scalable Size Units
+    // Scalable Size Units
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
-    //RoundedImageView -A fast ImageView that supports rounded corners, ovals, and circles.
+    // ViewModel - LiveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.6.2"
+
+    // Image slide
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    // RoundedImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    // ViewModel - LiveData
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"
-    // alternately - if using Java8, use the following instead of lifecycle-compiler
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
-
-    //imageslide
-    implementation 'com.github.smarteist:autoimageslider:1.4.0'
-
-
+    // Test
+    implementation 'org.jetbrains:annotations:23.0.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
